--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,5 +1,6 @@
 // bower:scss
 @import "../components/bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
-
+@import "partials/colors";
 @import "partials/main";
+@import "partials/header";
