--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -2,6 +2,7 @@
 @import "../components/bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 @import "partials/colors";
+@import "partials/icons";
 @import "partials/main";
 @import "partials/header";
 @import "partials/business";
