--- a/public/scss/partials/_business.scss
+++ b/public/scss/partials/_business.scss
@@ -3,13 +3,15 @@ div.row#business-header {
 }
 
 div.pictures {
+    height: 100%;
     img {
-        max-width: 80%;
-        max-width: 80%;
+        height: 100%;
+        max-width: 100%;
     }
 }
 
 div.infos {
+    height: 100%;
     h1 {
         font-weight: 200;
         font-size: 28px;
@@ -18,5 +20,13 @@ div.infos {
     p.info {
         border-bottom: 1px solid $grey-separator;
         font-size: 16px;
+    }
+}
+
+div.map {
+    height: 100%;
+    #gmap-business {
+        width: 100%;
+        height: 300px;
     }
 }
