--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5471,27 +5471,36 @@ nav.header {
   margin-top: 32px; }
 
 div.row#business-header {
-  height: 300px; }
+  height: 300px;
+  margin-top: 20px; }
+  div.row#business-header div.pictures {
+    height: 100%; }
+    div.row#business-header div.pictures img {
+      height: 100%;
+      max-width: 100%; }
+  div.row#business-header div.infos {
+    height: 100%; }
+    div.row#business-header div.infos h1 {
+      font-weight: 200;
+      font-size: 28px; }
+    div.row#business-header div.infos p.info {
+      border-bottom: 1px solid #E5E5E8;
+      font-size: 16px; }
+  div.row#business-header div.map {
+    height: 100%; }
+    div.row#business-header div.map #gmap-business {
+      width: 100%;
+      height: 300px; }
 
-div.pictures {
-  height: 100%; }
-  div.pictures img {
-    height: 100%;
-    max-width: 100%; }
-
-div.infos {
-  height: 100%; }
-  div.infos h1 {
-    font-weight: 200;
-    font-size: 28px; }
-  div.infos p.info {
-    border-bottom: 1px solid #E5E5E8;
-    font-size: 16px; }
-
-div.map {
-  height: 100%; }
-  div.map #gmap-business {
-    width: 100%;
-    height: 300px; }
+div#business-content {
+  margin-top: 37px; }
+  div#business-content .timetable {
+    background-color: white;
+    border-radius: 5px; }
+    div#business-content .timetable p.header {
+      width: 80%; }
+    div#business-content .timetable h4 {
+      color: #FE5B5F;
+      padding-left: 20px; }
 
 /*# sourceMappingURL=style.css.map */
