--- a/public/scss/partials/_business.scss
+++ b/public/scss/partials/_business.scss
@@ -1,32 +1,47 @@
 div.row#business-header {
     height: 300px;
-}
-
-div.pictures {
-    height: 100%;
-    img {
+    margin-top: 20px;
+    div.pictures {
         height: 100%;
-        max-width: 100%;
+        img {
+            height: 100%;
+            max-width: 100%;
+        }
+    }
+
+    div.infos {
+        height: 100%;
+        h1 {
+            font-weight: 200;
+            font-size: 28px;
+        }
+
+        p.info {
+            border-bottom: 1px solid $grey-separator;
+            font-size: 16px;
+        }
+    }
+
+    div.map {
+        height: 100%;
+        #gmap-business {
+            width: 100%;
+            height: 300px;
+        }
     }
 }
 
-div.infos {
-    height: 100%;
-    h1 {
-        font-weight: 200;
-        font-size: 28px;
-    }
-
-    p.info {
-        border-bottom: 1px solid $grey-separator;
-        font-size: 16px;
-    }
-}
-
-div.map {
-    height: 100%;
-    #gmap-business {
-        width: 100%;
-        height: 300px;
+div#business-content {
+    margin-top: 37px;
+    .timetable {
+        background-color: white;
+        border-radius: 5px ;
+        p.header {
+            width:80%;
+        }
+        h4 {
+            color: $red-title;
+            padding-left: 20px;
+        }
     }
 }
