--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5497,10 +5497,18 @@ div#business-content {
   div#business-content .timetable {
     background-color: white;
     border-radius: 5px; }
-    div#business-content .timetable p.header {
-      width: 80%; }
-    div#business-content .timetable h4 {
-      color: #FE5B5F;
-      padding-left: 20px; }
+    div#business-content .timetable div.header {
+      width: 80%;
+      display: inline-block;
+      margin-left: 10%;
+      margin-bottom: 16px;
+      border-bottom: 1px solid #E5E5E8; }
+      div#business-content .timetable div.header .icon-timetable {
+        margin-top: 10px;
+        margin-bottom: -4px; }
+      div#business-content .timetable div.header h4 {
+        color: #FE5B5F;
+        display: inline-block;
+        padding-left: 10px; }
 
 /*# sourceMappingURL=style.css.map */
