--- a/public/scss/partials/_business.scss
+++ b/public/scss/partials/_business.scss
@@ -14,19 +14,46 @@ div.row#business-header {
         h1 {
             font-weight: 200;
             font-size: 28px;
+            margin-bottom: 40px;
         }
 
         p.info {
             border-bottom: 1px solid $grey-separator;
             font-size: 16px;
+            min-height: 30px;
+
+            &.address {
+                min-height: 50px;
+            }
+
+            span {
+                display: inline-block;
+                float: left;
+            }
+
+            .icon {
+                float: left;
+            }
+
+            span.content {
+                margin-left: 20px;
+                font-size: 16px;
+                height: 100%;
+            }
+
+            .label {
+                font-size: 14px;
+            }
         }
     }
 
     div.map {
         height: 100%;
+        padding: 0;
         #gmap-business {
             width: 100%;
-            height: 300px;
+            height: 100%;
+            border-radius: 5px;
         }
     }
 }
