--- a/public/scss/partials/_colors.scss
+++ b/public/scss/partials/_colors.scss
@@ -3,8 +3,9 @@ $grey-header: #F9F9FA;
 $grey-body: #F6F6F7;
 $grey: #818896;
 $grey-separator: #E5E5E8;
-
 $red-title: #FE5B5F;
+$black: #333E49;
+$grey-footer: #dfe1e4;
 
 .label-red {
     @extend .label-default;
