--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -6,3 +6,5 @@
 @import "partials/main";
 @import "partials/header";
 @import "partials/business";
+@import "partials/hairfie";
+@import "partials/home";
