--- a/public/scss/partials/_main.scss
+++ b/public/scss/partials/_main.scss
@@ -7,5 +7,24 @@ body {
 .container-fluid {
     padding-right: 0px;
     padding-left: 0px;
-    height: 1000px;
+}
+
+footer {
+    position:fixed;
+    left:0px;
+    bottom:0px;
+    height:60px;
+    width:100%;
+    background:$grey-footer;
+
+}
+
+.background-footer {
+    width: 980px;
+    margin: 0 auto;
+}
+
+.social img {
+    width:40px;
+    padding:45px 30px 0 10px;
 }
