--- a/public/scss/partials/_main.scss
+++ b/public/scss/partials/_main.scss
@@ -1,7 +1,13 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
     font: 14px "Source Sans Pro", Helvetica, Arial, sans-serif;
     color: $grey;
     background-color: $grey-body;
+    margin-bottom: 60px;
 }
 
 .container-fluid {
@@ -10,21 +16,14 @@ body {
 }
 
 footer {
-    position:fixed;
-    left:0px;
-    bottom:0px;
-    height:60px;
-    width:100%;
-    background:$grey-footer;
-
-}
-
-.background-footer {
-    width: 980px;
-    margin: 0 auto;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: $grey-footer;
 }
 
 .social img {
     width:40px;
-    padding:45px 30px 0 10px;
+    margin: 10px;
 }
