Modification de la font weight

--- a/public/scss/partials/_business.scss
+++ b/public/scss/partials/_business.scss
@@ -78,6 +78,7 @@ div#business-content {
 
         .review {
             min-height: 110px;
+            font-weight: 200;
         }
 
         .price {
