--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5541,7 +5541,8 @@ div#business-content {
     color: #FE5B5F;
     display: inline-block; }
   div#business-content .reviews-price .review {
-    min-height: 110px; }
+    min-height: 110px;
+    font-weight: 200; }
   div#business-content .reviews-price .price {
     border-top: 1px solid #E5E5E8;
     min-height: 50px;
