--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5596,6 +5596,9 @@ div.day {
     max-width: 45px;
     width: 20%;
     display: inline-block; }
+    .row.hairfie .hairfie-legend-container .avatar img {
+      max-width: 100%;
+      max-height: 100%; }
   .row.hairfie .hairfie-legend-container .author {
     margin-top: 10px;
     margin-left: 10px;
