--- a/public/scss/partials/_hairfie.scss
+++ b/public/scss/partials/_hairfie.scss
@@ -20,6 +20,11 @@
             max-width: 45px;
             width: 20%;
             display: inline-block;
+
+            img {
+                max-width: 100%;
+                max-height: 100%;
+            }
         }
         .author {
             margin-top: 10px;
