--- a/public/scss/partials/_hairfie.scss
+++ b/public/scss/partials/_hairfie.scss
@@ -4,6 +4,11 @@
             border-radius: 5px;
             max-width: 100%;
         }
+        .share-button {
+            position: absolute;
+            bottom: 20px;
+            right: 24px;
+        }
         margin-bottom: 20px;
     }
     .hairfie-legend-container {
