--- a/public/scss/partials/_business.scss
+++ b/public/scss/partials/_business.scss
@@ -83,6 +83,8 @@ div#business-content {
             .review-content {
                 text-transform: uppercase;
                 font-style: 16;
+                border-top: 1px solid $grey-separator;
+                width: 100%;
             }
         }
 
