--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -5,6 +5,10 @@ nav.header {
     .container {
         height: 100%;
     }
+
+    #formLogin {
+        padding: 17px;
+    }
 }
 .navbar-brand,
 .navbar-nav li a {
