--- a/public/scss/partials/_colors.scss
+++ b/public/scss/partials/_colors.scss
@@ -4,6 +4,7 @@ $grey-body: #F6F6F7;
 $grey: #818896;
 $grey-separator: #E5E5E8;
 $red-title: #FE5B5F;
+$red-hairfie: #EA5C62;
 $black: #333E49;
 $grey-footer: #dfe1e4;
 
