--- a/public/scss/partials/_hairfie.scss
+++ b/public/scss/partials/_hairfie.scss
@@ -10,6 +10,21 @@
             right: 24px;
         }
         margin-bottom: 20px;
+
+        .circle {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            font-size: 20px;
+            color: white;
+            line-height: 50px;
+            font-weight: 200;
+            text-align: center;
+            background: $red-hairfie;
+            position: absolute;
+            top: 25px;
+            left: 40px;
+        }
     }
     .hairfie-legend-container {
         padding-top: 0;
