--- a/public/scss/partials/_hairfie.scss
+++ b/public/scss/partials/_hairfie.scss
@@ -2,7 +2,7 @@
     .hairfie-picture {
         img {
             border-radius: 5px;
-            max-width: 100%;
+            width: 100%;
         }
         .share-button {
             position: absolute;
