--- a/public/scss/partials/_hairfiesList.scss
+++ b/public/scss/partials/_hairfiesList.scss
@@ -7,10 +7,10 @@ $circle-width: 25px;
 
     .hairfie-picture {
         display: inline-block;
-        width: $hairfie-width;
-        height: $hairfie-width;
-        line-height: $hairfie-width;
-        padding-right: 30px;
+        // width: $hairfie-width;
+        // height: $hairfie-width;
+        // line-height: $hairfie-width;
+        // padding-right: 30px;
         padding-bottom: 30px;
 
         .img-container {
