--- a/public/scss/partials/_main.scss
+++ b/public/scss/partials/_main.scss
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    font: 14px "Source Sans Pro", Helvetica, Arial, sans-serif;
+  font: 14px "Source Sans Pro", Helvetica, Arial, sans-serif;
     color: $grey;
     background-color: $grey-body;
     margin-bottom: 60px;
@@ -13,6 +13,14 @@ body {
 .container-fluid {
     padding-right: 0px;
     padding-left: 0px;
+
+  &.public-layout {
+
+    @media (min-width: $screen-sm-min) {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
 }
 
 footer {
